--- a/Test Project/Site Code/public/index.html
+++ b/Test Project/Site Code/public/index.html
@@ -16,7 +16,7 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/eccc376168.js" crossorigin="anonymous"></script>
 
-    <title>Click Dealer Test</title>
+    <title>Mini Project - 3 Column Promo</title>
 </head>
 
 <body class="main">
